# mamba-embedded

./: .gitignore  AGENTS.md  Cargo.toml  HPO_on_MCU_todo.md  README.md  build-esp-dl.sh  build.rs  create-all-plots.sh  pyrightconfig.json  run-all-experiments.sh  run-esp.sh
.cargo/: config.toml
config/: arch-mamba1-kws-bidir-mul.yaml  arch-mamba1-kws.yaml  test.yaml
config/har/: arch-mamba1-har-bidir-mul.yaml  arch-mamba1-har-bidir.yaml  arch-mamba1-har.yaml
config/kws/: arch-mamba1-kws-2.yaml  arch-mamba1-kws-bidir-mul.yaml  arch-mamba1-kws-bidir.yaml
esp-dl/: .gitignore  CMakeLists.txt  partitions.csv  pytest.py  sdkconfig
esp-dl/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
src/: lib.rs
src/data/: mod.rs
src/model/: linear_har_model.onnx  linear_har_model.onnx.data  mnist.onnx  mod.rs
src/models/: mod.rs
src/utils/: mod.rs  stack_paint.rs
tools/: check_espdl_ops.py  fix_transpose_mismsatch.py  kws_dataset_gen.py  simplify_for_espdl.py
train/: arch_search.py  data.py  export_weights.py  har_to_burn_tensor.py  kws_dataset_gen.py  kws_to_burn_tensor.py  main.py  mamba_cpu_funcs.py  measure_variance.py  model.py  models.py  onnx.py  onnx_utils.py  plot_arch_search.py  quantize.py  selective_scan.py  test_model.py  top_models.py  train.py  train_mnist.py
train/plot_types/: accuracy.py  common.py  latency_correlation.py  param_accuracy.py  param_latency.py  pareto_front.py  profiling.py  quantization_loss.py
utils/: har_to_burn_tensor.py  mnist_to_burn_tensor.py
