[package]
edition = "2024"
name = "mamba-embedded"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "mamba-embedded"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log = "0.4.27"

critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
# onnx-ir = { path = "/home/friso/testing/onnx-ir", default-features = false, featurs = [
#   "ndarray",
# ] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-alloc = "0.9.0"
burn = { version = "0.20.1", default-features = false, features = ["ndarray"] }
burn-store = { version = "0.20.1", default-features = false, features = [
  "burnpack",
] }


[build-dependencies]
burn-import = "0.21.0-pre.1"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
